Work on integration tests
