# src/main/java/net/keksipurkki/petstore/model/UserRecord.java
@@ -1,0 +1,17 @@
+package net.keksipurkki.petstore.model;
+
+import io.swagger.v3.oas.annotations.media.Schema;
+
+import javax.validation.constraints.NotNull;
+
+@Schema(description = "User data")
+public record UserRecord(
+    @NotNull String username,
+    @NotNull String firstName,
+    @NotNull String lastName,
+    @NotNull String email,
+    @NotNull String password,
+
+    String phone
+) {
+}
